--- a/assets/search-style.scss
+++ b/assets/search-style.scss
@@ -217,9 +217,9 @@ body {
             display: none;
         }
 
-        // .mob-image {
-        //     display: none;
-        // }
+        .mob-image {
+            display: none;
+        }
     }
 
 }
